--- a/rutina-de-ejercicios-de-abdominales.html.twig
+++ b/rutina-de-ejercicios-de-abdominales.html.twig
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -258,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>BLACK FRIDAY 50%</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <!-- <p class="text-white h5 pb-lg-4">Videosesiones virtuales para tener un abdomen perfecto!</p> -->
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">DESARROLLA LA MUSCULATURA ABDOMINAL CON ESTA RUTINA</h2>
                     <p class="text-white text-medium mb-5">Videosesiones virtuales para tener un abdomen perfecto. Déjate guiar por las clases online de ictiva y consigue en pocas semanas un abdomen tonificado y definido.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>No fuerces la espalda: es el principal error en las rutinas de ejercicio de abdominales. Dadas las posturas que se realizan para hacer este tipo de ejercicios, es probable que te ayudes de la espalda para impulsarte. Si lo haces, no conseguirás los resultados esperados y puedes padecer molestias en la espalda.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Contrae el abdomen mientras haces el ejercicio: es muy importante concentrar el esfuerzo en la zona que vas a trabajar, en este caso, la zona abdominal. Es fundamental para hacer eficaces los ejercicios. En ictiva queremos mostrarte cómo se realiza correctamente la rutina deejercicios de abdominales.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -387,7 +387,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para llevar a cabo estos ejercicios, necesitarás una esterilla. Así, evitarás el contacto directo con el suelo. Si no tienes una esterilla puedes utilizar cualquier objeto similar que tengas en casa, por ejemplo una alfombra gruesa.</p>
                     <p class="mb-3 ls text-medium">En el título de cada ejercicio aparecen unos valores numéricos escritos entre paréntesis. El primer número se refiere a las series que hay que realizar en cada ejercicio y el segundo corresponde a las repeticiones. Para hacer totalmente efectiva una rutina de ejercicios, es importante respetar los tiempos de descanso. En este caso, 45 segundo de descanso entre series y un minuto entre ejercicio.</p>
                     <p class="mb-3 ls text-medium">Clica en el enlace (título de los ejercicios) para conocer más en profundidad que beneficios aportan estos ejercicios.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -404,7 +404,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">El crunch abdominal es un ejercicio clásico para trabajar la musculatura abdominal, concretamente la parte superior. Prácticamente todo aquel que haya hecho deporte alguna vez conoce este ejercicio, sin embargo, es muy sencillo cometer errores al realizarlo. Una mala ejecución hace que los resultados no sean los esperados y en ocasiones puede derivar en alguna lesión o molestia.</p>
                     <p class="mb-3 ls text-medium">Para llevar a cabo el crunch abdominal únicamente necesitarás una esterilla para proteger la espalda del suelo.</p>
                     <p class="mb-3 ls text-medium">Cuando haces ejercicios en zonas localizadas y específicas del cuerpo es muy importante concentrar el esfuerzo exclusivamente en esa zona. En este caso, utiliza la parte abdominal superior para elevarte como explicaremos a continuación. De lo contrario, no estarás realizando el ejercicio del modo correcto.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -425,7 +425,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><span class="text-primary mr-3">2. </span> El brazo que has colocado sobre la esterilla tienes que flexionarlo y los pies deben de estar juntos. Por otro lado, las piernas mátenlas rectas intentando que el peso no caiga hacia abajo.</li>
                         <li class="mb-3 ls text-medium"><span class="text-primary mr-3">3. </span> En esta posición, empieza el movimiento. Al tratarse de un ejercicio isométrico, el esfuerzo se realiza al mantener la posición. Intenta aguantar el máximo de tiempo posible en esta posición.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -446,7 +446,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><span class="text-primary mr-3">3. </span>En esta posición comienza el movimiento. Desciende una pierna flexionando la rodilla y apoyándola en la esterilla.</li>
                         <li class="mb-3 ls text-medium"><span class="text-primary mr-3">4. </span>Acto seguido, haz exactamente el mismo movimiento pero con la otra pierna.</li>
                         <li class="mb-3 ls text-medium"><span class="text-primary mr-3">5. </span>Una vez tienes las dos piernas apoyadas en el suelo, en posición de cuadrupedia, regresa a la posición inicial volviendo a extender primero una pierna y luego la otra.</li>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
