--- a/salud.html.twig
+++ b/salud.html.twig
@@ -252,7 +252,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="btn text-dark text-uppercase" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="btn text-white text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">INICIA TU ENTRENAMIENTO</a>
+                        <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
