--- a/tabata.html.twig
+++ b/tabata.html.twig
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -258,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>BLACK FRIDAY 50%</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Descubre el método tabata y pon a prueba tu cuerpo</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Videosesiones de Ejercicios Tabata</h2>
                     <p class="text-white text-medium mb-5">Ponte en forma más que nunca en pocas semanas!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -370,7 +370,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">El creador del tabata es el japonés Izumi Tabata y lo creó para maximizar el rendimiento de los deportistas de élite, lo que lo convierte en la disciplina perfecta para conseguir un cuerpo de ensueño.</p>
                     <p class="mb-3 ls text-medium">Para realizar la rutina tabata es importante hacer los ejercicios breves pero a nivel intenso. Por ejemplo, realizando 8 ejercicios durante 4 minutos cada uno en total, repartidos en series de 20 segundos cada uno y descansando otros 10 segundos. Repetiremos cada grupo de ejercicios 8 veces.</p>
                     <p class="mb-3 ls text-medium">Para asegurarnos que progresamos en cada entrenamiento de tabata principiantes. Anotaremos el número de repeticiones que hacemos en cada ejercicio de 20 segundos. Si vemos que el número de repeticiones aumenta con el tiempo, es que estamos progresando, y en consecuencia, nuestro rendimiento físico. Pero para hacerlo, debemos asegurarnos que ejecutamos la técnica de cada ejercicio correctamente, no debemos hacerlo de cualquier manera porque pierde la efectividad del ejercicio y podemos lesionarnos.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -386,7 +386,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Una de las ventajas del tabata cardio es que cualquier ejercicio puede formar parte de los ejercicios tabata. Pero nosotros siempre recomendamos no hacer aquellos ejercicios que se centran en un solo músculo en concreto o que son muy complejos de ejecutar. Para poder hacer el máximo número de repeticiones posibles fácilmente y hacer trabajar todo el cuerpo a la vez.</p>
                     <p class="mb-3 ls text-medium">Con nuestra <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8" class="text-primary">tabata APP</a>, encontrarás los mejores ejercicios que se adaptan a esta disciplina, para que selecciones el que más te gusta y puedas hacer tu entrenamiento tabata en casa.</p>
                     <p class="mb-3 ls text-medium">Los ejercicios de <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" class="text-primary">tabata timer online</a> que tienen más éxito en ictiva son las sentadillas, las flexiones y los abdominales, porque son muy fáciles de hacer y gente de todos los niveles y formas físicas pueden hacerlos y no se necesita material para hacerlos.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -403,7 +403,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Jonathan te dará la motivación necesaria para poder mejorar tu condición física día tras día con el tabata timer online.</p>
                     <p class="mb-3 ls text-medium">Verás que sus vídeos están clasificados en 5 categorías diferentes: principiante, básico, medio, avanzado y Pro. Para que todo el mundo pueda empezar con el entrenamiento que corresponde con su nivel de forma física. Para aquellos que tengan buena forma física pero que nunca han practicado esta disciplina, el tabata principiantes es ideal para aprender los primeros pasos y acostumbrarse al tabata cardio.</p>
                     <p class="mb-3 ls text-medium">Gracias a ictiva, entrenar en casa será muy fácil y cómodo, ¡entra ahora en la web y elige la vídeosesión que quieres realizar!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -420,7 +420,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Es por esto, que en ictiva hemos creado el apartado “Dietas”, dónde hemos preparado una serie de regímenes en función del objetivo de cada usuario. Estos regímenes están compuestos de 5 comidas al día y son el mejor complemento al deporte. Todas las recetas son muy fáciles de hacer, si alguna de ellas no te gusta, puedes sustituirla por otra que te proponemos.</p>
                     <p class="mb-3 ls text-medium">Además, también encontrarás en cada receta el valor calórico de cada plato y la información nutricional, que te servirá como guía y complemento para tus ejercicios.</p>
                     <p class="mb-3 ls text-medium">Así que no lo dudes más y empieza hoy a preparar los platos de la dieta que serán el mejor complemento a tus sesiones de deporte. Porque hay que cuidarse tanto por dentro como por fuera, ictiva te lo pone fácil. ¡Entra ahora para descubrir todas las recetas!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -436,7 +436,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para estar al día de todo lo que pasa y compartir tu experiencia al hacer tabata en casa, hacer las preguntas que tengas y encontrar la motivación extra que necesitas, únete a la comunidad ictiva en nuestras redes sociales Facebook, Twitter, YouTube e Instagram, dónde, además, podrás interactuar con otros usuarios. También existe la tabata app, para que lleves tus ejercicios a todas partes.</p>
                     <p class="mb-3 ls text-medium">En Facebook, encontrarás grupos específicos en función de los objetivos de los integrantes del grupo, así, en el grupo de esta disciplina encontrarás respuesta a todas tus preguntas.</p>
                     <p class="mb-3 ls text-medium">Para completar la información sobre la rutina tabata, entra en el blog donde encontrarás consejos para mejorar día a día y maximizar el efecto de tu rutina. Además, también hay información sobre salud, bienestar y deporte que te puede interesar.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -454,7 +454,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Otro dato a tener en cuenta es no levantar más peso del que somos capaces, para evitar posibles lesiones.</p>
                     <p class="mb-3 ls text-medium">Si nunca has hecho este tipo de entrenamiento, no te preocupes, podrás ir descubriendo la disciplina y avanzar poco a poco. Si no tienes el material necesario, ten en cuenta que se puede sustituir la mayor parte por cosas que tenemos por casa, por ejemplo, puedes sustituir unas mancuernas por un par de botellas llenas de arroz o arena.</p>
                     <p class="mb-3 ls text-medium">Recuerda también, que tienes que hidratarte bien, antes, durante y después de los ejercicios de tabata abdominales. Con estos consejos las sesiones de entrenamiento irán rodando, ¿a qué esperas para empezar?</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
