--- a/ejercicios-hipopresivos.html.twig
+++ b/ejercicios-hipopresivos.html.twig
@@ -55,11 +55,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Cómo hacer hipopresivos fácilmente y notar los resultados." />
     <meta property="og:description" content="Los ejercicios hipopresivos son muy beneficiosos, especialmente para las mujeres. Cómo hacerlos correctamente puede ser difícil sin una guía como esta." />
-    <meta property="og:url" content="https://www.ictiva.com/tabla-abdominales/" />
+    <meta property="og:url" content="https://www.ictiva.com/ejercicios-hipopresivos/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.com/tabla-abdominales/" />
+    <link rel=”canonical” href="https://www.ictiva.com/ejercicios-hipopresivos/"/>
 
     <!--Icon, favicon & webapp -->
     <link rel="shortcut icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -253,7 +253,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=salud">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=salud"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -262,10 +262,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud"><strong>BLACK FRIDAY 50%</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -284,7 +284,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Los abdominales que están de moda y tanto enganchan ¡sigue leyendo!</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Descubre los ejercicios hipopresivos</h2>
                     <p class="text-white text-medium mb-5">Aprende a realizar la técnica hipopresiva paso a paso de la mano de nuestra Monitora especialista Gloria Sobrero. Domina los ejercicios abdominales hipopresivos y presume de vientre plano.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -374,7 +374,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Esta disciplina se ha convertido en la técnica favorita de todo el mundo, incluso de los deportistas de élite para mejorar su condición física. Y es que aporta numerosos beneficios. Entre ellos encontramos que nos ayuda a mejorar el rendimiento de nuestro cuerpo mientras realizamos otros deportes y reduce las posibilidades de sufrir una lesión. Además, en las mujeres previene la caída de los órganos pélvicos.</p>
                     <p class="mb-3 ls text-medium">Son ejercicios muy fáciles de realizar y prácticamente todo el mundo los puede hacer, además de aportar numerosos beneficios, es por esto que cada vez son más, los que deciden empezar a practicar esta disciplina.</p>
                     <p class="mb-3 ls text-medium">¿A qué espera para empezar a ver los <a href="https://www.ictiva.com/ejercicios-en-casa/videos-gimnasia-hipopresiva/" class="text-primary">vídeos de gimnasia hipopresiva</a> y practicarlos en casa?</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -390,7 +390,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">La principal razón por la que la gente empieza a hacer estos ejercicios en casa es que existen muchas variantes, se pueden hacer de pie, sentados, apoyando manos y rodillas en el suelo… Además, puedes hacer abdominales hipopresivos donde quieras, en casa, en el trabajo o incluso en una terraza tomando algo, ya que solo necesitas tu cuerpo para hacerlos y es muy fácil de ejecutar la técnica. Es por esto, que tanto médicos como fisioterapeutas recomiendan esta disciplina para mejorar la salud de sus pacientes.</p>
                     <p class="mb-3 ls text-medium">En nuestras clases de ejercicios hipopresivos en casa notarás desde el primer día como trabaja tu abdomen. A pesar de que se trate de una técnica muy sencilla, es muy importante realizarla correctamente para no lesionarnos. En nuestros vídeos, te explicaremos paso a paso cómo se debe hacer con ejemplos muy claros y amplias explicaciones.</p>
                     <p class="mb-3 ls text-medium">Estas <a href="https://www.ictiva.com/clases-hipopresivos/" class="text-primary">clases de hipopresivos</a>, están divididas en 4 niveles (principiante, básico, medio y avanzado) dónde en las primeras te explicaremos todo lo que hay que saber e iremos introduciendo poco a poco esta disciplina en tu rutina de entrenamiento para llegar a un nivel de dominio más avanzado. Además, verás que se quemas muchas calorías al hacer cada ejercicio. Poco a poco, iremos aumentando la duración de los ejercicios y la complejidad de ejecución para que te resulten como pequeños retos a afrontar cada día pero fáciles de hacer.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -408,7 +408,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Asimismo, aparte de los vídeos de abdominales hipopresivos, tendrás acceso a más de 800 vídeo-sesiones de nuestras más de 21 disciplinas deportivas diferentes. Para que puedas combinarlos como quieras y completar tu entrenamiento haciendo trabajar todo el cuerpo.</p>
                     <p class="mb-3 ls text-medium">Solo con descargarte, podrás ver gratuitamente 50 vídeos de todas las disciplinas para que elijas tus favoritos y los hagas todas las veces que quieras.</p>
                     <p class="mb-3 ls text-medium">Ahora puedes descargarte nuestra App de Android y empezar a realizar tus <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&utm_source=ictiva&utm_medium=ejercicios-hipopresivos" class="text-primary">ejercicios hipopresivos</a> y si tienes sistema IOS, también encontrarás nuestra APP para hacer <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=ictiva&utm_medium=ejercicios-hipopresivos" class="text-primary">gimnasia hipopresiva</a> en Apple Store.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -424,7 +424,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Como ya sabéis, la eficacia de la gimnasia abdominal hipopresiva depende de la buena ejecución de los ejercicios. En parte depende de la buena explicación del profesor y de su profesionalidad. En ictiva contamos siempre con los mejores entrenadores personales que son capaces de explicar a todo el mundo cómo se hacen. Acercando así, el gimnasio a todo tipo de personas independientemente de su nivel y de sus conocimientos en la materia.</p>
                     <p class="mb-3 ls text-medium">En este caso, contamos con Gloria Sobrero, experta en esta técnica anaeróbica que además es fisioterapeuta y especialista en reeducación del suelo pélvico. Por lo que sabrá explicaros a la perfección en qué consisten los abdominales hipopresivos.</p>
                     <p class="mb-3 ls text-medium">Sus clases se dividen en dos subcategorías los dos primeros niveles (principiante y básico) están dedicados a aquellas personas que comienzan con los ejercicios. El nivel 4 es para gente que tiene nivel medio y el nivel 5 es para aquellos que tengan un nivel avanzado.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -441,7 +441,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Sin embargo, para que no te sientas solo durante el proceso y ver que hay más gente que tiene los mismos objetivos que tú, para poder animaros mutuamente, hacer preguntas y estar al corriente de las novedades acerca de temas como la salud, el bienestar y el deporte, hemos creado una comunidad en las redes sociales. De esta manera, nos puedes encontrar en Facebook, Twitter, Instagram y Youtube para informarte en todo momento sobre lo que pasa.</p>
                     <p class="mb-3 ls text-medium">Particularmente, en Facebook encontrarás grupos especiales en función de los objetivos que tengan sus integrantes. De este modo, podrás encontrar o hablar sobre temas que te sean más pertinentes.</p>
                     <p class="mb-3 ls text-medium">Así, gracias a esta red de comunicación obtendrás la motivación extra que necesitás para poder lograr tus objetivos.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -458,7 +458,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">El te dirá si puedes realizar esta disciplina o no. Ya que al trabajar la parte interna del abdomen y hacer apneas, es posibles que si se sufre algún tipo de indisposición médica no los podamos realizar.</p>
                     <p class="mb-3 ls text-medium">También recordaros que tenéis que seguir las instrucciones de los monitores durante la visualización de los vídeos para evitar posibles lesiones. Porque es vuestra responsabilidad que se cumplan dichas instrucciones.</p>
                     <p class="mb-3 ls text-medium">La información sobre el gasto de calorías en cada ejercicio es aproximativa, ya que depende de varios factores. Ictiva no se hace responsable del mal uso de nuestra plataforma y no garantizamos los resultados.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
