--- a/ejercicios-para-adelgazar.html.twig
+++ b/ejercicios-para-adelgazar.html.twig
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -258,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>BLACK FRIDAY 50%</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Ejercicios para adelgazar en casa en 8 semanas</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Vídeosesiones de  ejercicios para adelgazar en casa</h2>
                     <p class="text-white text-medium mb-5">Gracias a ictiva encontrarás tu entrenamiento para adelgazar donde y cuando quieras. Inicia tu entreno ahora y alcanza tu peso ideal.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -370,7 +370,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">La gimnasia es un excelente deporte para perder peso, hará trabajar todo tu cuerpo sin darte cuenta al tiempo que te hará quemar grasa, en consecuencia, perder peso. Una de sus grandes ventajas es que se puede practicar en cualquier lugar.</p>
                     <p class="mb-3 ls text-medium">Además, todo el mundo puede hacerla porque se adapta a todas las condiciones físicas. Para ello, hemos creado varias sesiones donde cada usuario encontrará la rutina para adelgazar que más se adapta a sus necesidades. También hay gimnasia para mayores, creada especialmente para personas de la tercera edad con la que podrán fortalecer músculos y huesos, haciéndoles sentir jóvenes.</p>
                     <p class="mb-3 ls text-medium">Poniéndotelo tan fácil, ya no tendrás excusa para saltarte un entrenamiento para adelgazar, ¡empieza hoy a ponerte en forma!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -386,7 +386,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Con ictiva es muy fácil. Solo tienes que acceder a tu perfil, buscar la vídeosesión que quieres realizar y darle al play.</p>
                     <p class="mb-3 ls text-medium">Estos vídeos son perfectos para hacer en casa o en cualquier otro sitio porque no necesitan mucho espacio, por lo que el tamaño de tu habitación no impedirá que los puedas realizar. En cuanto al material necesario, no necesitarás mucho, ya que en la mayoría de ejercicios de esta rutina para adelgazar utilizarás el peso de tu propio cuerpo para realizar las repeticiones. Como mucho necesitarás una esterilla, unas pesas o una silla para apoyarte.</p>
                     <p class="mb-3 ls text-medium">Además, al estar agrupados según el nivel de dificultad que tengas, encontrarás que se adaptan a tu condición física a la vez que te permiten avanzar de nivel. En cada vídeo encontrarás información sobre el ejercicio que realizas, su duración, las calorías que te hace quemar, el entrenador que lo hace, la disciplina a la que pertenece y el material que necesitas.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -402,7 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Las sesiones las preparan entrenadores expertos en la materia que conocen bien las necesidades de cada objetivo que te macas.</p>
                     <p class="mb-3 ls text-medium">Ellos, han elaborado un plan de entrenamiento para adelgazar que dura 8 semanas. No importa el nivel que tengas porque empieza con ejercicios sencillos y cortos para ir aumentando progresivamente su dificultad y duración (de entre 15 a 30 minutos), así, el cuerpo se irá adaptando poco a poco a la práctica de ejercicio e irá mejorando su rendimiento.</p>
                     <p class="mb-3 ls text-medium">Además, para que no te sea repetitivo y para que el entrenamiento para adelgazar sea más divertido, los entrenamientos para adelgazar se pueden combinar con varias disciplinas, como: Aeróbic, Fitness, Tabata, Combat, Steps, TBC, Ciclo in. Así, cada día podréis hacer diferentes ejercicios para adelgazar en casa.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -418,7 +418,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En ictiva queremos hacer lo más accesible posible el gimnasio online. Es por esto que hemos desarrollado la aplicación con la que tendrás acceso a tus sesiones de entrenamiento allí dónde vayas.</p>
                     <p class="mb-3 ls text-medium">Además, es una de las más completas del mercado. Ya que a parte de encontrarte con más de 800 vídeosesiones de más de 21 disciplinas diferentes. ¡Con lo que la variedad está asegurada! También, te proporcionará información importante sobre la evolución de tus <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" class="text-primary">entrenamientos para adelgazar</a>. Por ejemplo el IMC, el peso corporal, las calorías que quemas o el tiempo total que has estado haciendo actividades. Todo esto a través de gráficos y estadísticas.</p>
                     <p class="mb-3 ls text-medium">Descárgate ahora la aplicación para Android en Google Play o en Apple Store si tienes iOS y empieza a hacer <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8" class="text-primary">gimnasia para adelgazar</a> a partir de hoy dónde y cuándo quieras.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -435,7 +435,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para que puedas completar tu gimnasia para adelgazar, hemos preparado un apartado dónde hemos recopilado todas las dietas en función de los objetivos que tengas. De esta manera lo tendrás todo en un mismo lugar.</p>
                     <p class="mb-3 ls text-medium">Si alguno de los platos que te toca no te gusta o por razones médicas no puedes comer alguno de sus ingredientes, puedes cambiar la receta por otra que te convenga más, las encontrarás en el mismo apartado.</p>
                     <p class="mb-3 ls text-medium">Además, en cada receta te incluimos la información nutricional, el valor calórico que te será de guía de tu plan nutricional.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -452,7 +452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Además, en Facebook encontrarás grupos específicos según los objetivos que tengas. ¡Busca ahora tu grupo de gimnasia y ponte al día de las últimas novedades! Te darán la motivación extra que necesitas para seguir con tus entrenamientos y llegar a tus objetivos.</p>
                     <p class="mb-3 ls text-medium">En el blog de ictiva encontrarás las últimas noticias de salud, bienestar, y deporte que te pueden interesar, con consejos útiles que puedes poner en práctica en tu día a día y maximizar el efecto de tu rutina para adelgazar.</p>
                     <p class="mb-3 ls text-medium">La información sobre el gasto de calorías en cada ejercicio es aproximativa, ya que depende de varios factores. Ictiva no se hace responsable del mal uso de nuestra plataforma y no garantizamos los resultados.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
