--- a/estiramientos-espalda.html.twig
+++ b/estiramientos-espalda.html.twig
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -258,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud"><strong>BLACK FRIDAY 50%</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Acaba con el dolor de espalda gracias a las videosesiones de  estiramientos</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Ten una espalda sana y evita dolores y lesiones</h2>
                     <p class="text-white text-medium mb-5">Con nuestras sesiones de estiramientos de espalda aliviarás tu dolor. Empieza hoy a cuidarla!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -370,7 +370,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Mucha gente sufre dolor en esta zona del cuerpo, esto puede deberse a varios factores, a una mala postura, a una lesión, a estar muchas horas de pie o sentado, etc. Es algo muy molesto y que tenemos que hacer lo posible para acabar con esta dolencia que afecta a una gran mayoría de gente y que no todos saben qué hacer.</p>
                     <p class="mb-3 ls text-medium">Para que tú si sepas qué hacer en estos casos ictiva te da la clave, hacer estiramientos para la espalda, puede parecer una cosa sin importancia o que no va a aportar gran cosa pero la verdad es que no es cierto.</p>
                     <p class="mb-3 ls text-medium">Según qué parte te duela tendrás que hacer una rutina  u otra, por ejemplo, si te duele la parte baja, te recomendamos hacer estiramientos espalda baja, son ejercicios especialmente pensados para calmar esta zona que suele ser la que se sobrecarga más y la que sufre más, por ejemplo, podéis hacer nuestro ejercicio para fortalecer lumbares, lo encontraréis en la página web de ictiva o en la aplicación.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -386,7 +386,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Si os duele más la parte del medio de la espalda, los que necesitáis son nuestros estiramientos espalda media. Estos dolores aparecen después de estar mucho rato en una postura inadecuada, una lesión muscular (que puede ocurrir mientras entrenamos, si hacemos mal los ejercicios) o por una fractura en las vértebras, entre otros.</p>
                     <p class="mb-3 ls text-medium">Para evitar estas dolencias, recomendamos fortalecer esta zona haciendo deporte, eso sí, es muy importante que los hagáis tal y como os indica el profesor para evitar lesiones. Gracias a ictiva podréis hacerlos sin salir de casa.</p>
                     <p class="mb-3 ls text-medium">Uno de los mejores entrenamientos que encontraréis en esta categoría consiste en tumbarse en el suelo, sobre una esterilla boca arriba, llevar una rodilla al pecho y mantener allí cogiéndola con las manos, la otra pierna estará estirada. Después de mantener la posición durante unos segundos (entre 20 y 30) cambiaremos de pierna, la que está estirada pasa a estar doblada a la altura del pecho y la que estaba en el pecho estará estirada. Entrad en nuestro gimnasio online y veréis más ejercicios para hacer una rutina completa.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -402,7 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Los estiramientos espalda alta se recomiendan cuando te duele la parte alta, este dolor suele aparecer porque tenemos el escritorio demasiado alto o demasiado bajo o cuando nos sentamos demasiado cerca o demasiado lejos de la mesa, esto hace que tengamos que forzar la zona durante todo el día y se resiente. También aparece al tensar demasiado el brazo cuando está estirado, cuando levantamos demasiado un objeto pesado o al hacer los ejercicios de máquinas en el gimnasio mal.</p>
                     <p class="mb-3 ls text-medium">Esta suele ser una zona un poco olvidada pero cuando aparece el dolor, es muy molesto, puesto que al mínimo movimiento del brazo o al girar el torso, nos va a doler. Pero en ictiva queremos darle la importancia que se merece y para ello hemos preparado una serie de ejercicios que te ayudarán a aliviar el dolor.</p>
                     <p class="mb-3 ls text-medium">Uno de los ejercicios que vais a hacer es el siguiente: os colocáis de pie con los pies separados, un poco más que el ancho de las caderas, estirar el brazo derecho hacia arriba, al tiempo que el tronco se estira hacia la izquierda, el brazo tiene que acompañar este movimiento lateral, la columna tiene que estar recta y la cabeza también, tiene que seguir la línea de las vértebras. Después de aguantar en esta posición durante unos segundos cambiar de brazo y de lado.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -420,7 +420,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Esta dieta consta de 5 platos diarios y se debe seguir siempre, porque si la dejas pierde efecto. En nuestra página web encontrarás los pasos a seguir para hacer cada comida y también te daremos el valor nutricional de cada uno de ellos. Si un plato no te gusta o no lo puedes comer porque tienes alergia a uno de los ingredientes puedes quitar ese ingrediente o cambiar el plato por otro que te proponemos.</p>
                     <p class="mb-3 ls text-medium">Verás que son platos muy fáciles de preparar, sabrosos y que no te dejarán con hambre, ya que una buena dieta no debe hacerte pasar hambre.</p>
                     <p class="mb-3 ls text-medium">Gracias a tu gimnasio online ictiva, no solo tendrás acceso a tus entrenamientos sino que además podrás llevar un estilo de vida saludable y comer bien. No lo dudes más, entra ahora y descubre todo lo que te ofrecemos.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -437,7 +437,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Tener una <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" target="_blank" class="text-primary">espalda sana</a> nunca fue tan fácil gracias a ictiva, descarga ahora la aplicación en Apple Store si tienes iOS o en Google Play si tienes Android, ¡es gratis! al hacerlo tendrás acceso a 50 videosesiones gratuitas de más de 21 disciplinas diferentes para que hagas los vídeos que más te gusten tantas veces como quieras.</p>
                     <p class="mb-3 ls text-medium">Cuando te abones a uno de nuestros planes podrás ver más de 800 videosesiones diferentes. Además, también podrás ver cómo progresas día tras día, ya que verás los cambios de tu peso, las calorías que has quemado, los vídeos que has visto y muchos indicadores más, para saber cuáles, descárgate ya la APP.</p>
                     <p class="mb-3 ls text-medium">Esto hace que sea una de las aplicaciones más completas del mercado, descárgatela hoy y empieza a hacer las videosesiones en casa hoy mismo.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -454,7 +454,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para asegurarte que puedes hacer los ejercicios es mejor que vayas al médico y que te haga una revisión general y se asegure que no hay ningún problema o alguna contraindicación médica.</p>
                     <p class="mb-3 ls text-medium">Es muy importante que sigas las instrucciones que te dan los profesores, para hacer bien los ejercicios y evitar sufrir una lesión. Tú eres el responsable de seguir estas instrucciones bajo tu responsabilidad.</p>
                     <p class="mb-3 ls text-medium">La información que proporcionamos sobre las calorías que vas a quemar haciendo los vídeos es indicativa, que depende de varios factores. Ictiva no se hace responsable del mal uso de nuestras plataformas y tampoco garantiza los resultados.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
