--- a/sentadillas.html.twig
+++ b/sentadillas.html.twig
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>BLACK FRIDAY 50%</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -258,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>BLACK FRIDAY 50%</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Haz sentadillas en casa para tener los glúteos que siempre has deseado.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Te enseñamos cómo hacer sentadillas para ponerte en forma en casa.</h2>
                     <p class="text-white text-medium mb-5">Las sentadillas son fáciles de hacer y son uno de los ejercicios más completos que hay. ¿A qué esperas para empezar?</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Hay varias formas de hacerlas, se pueden hacer sin material o con material para añadir un poco de dificultad al ejercicio. Si no tenemos material, podemos hacer trabajar aún más el cuerpo haciendo Sentadillas profundas, por ejemplo.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Son un ejercicio muy completo y aparte de hacer trabajar la parte baja del cuerpo también supone un trabajo global haciendo trabajar la espalda y el abdomen, de esta forma también los definiremos y ganaremos equilibrio y estabilidad en ésa zona.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -389,7 +389,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Si quieres hacer otra modalidad también puedes, por ejemplo, la Sentadillas con peso, para hacerlas coge un par de mancuernas y haz los squats sujetando las mancuernas, una en cada mano, las mancuernas pueden quedarse en los laterales del cuerpo o en el medio, entre las piernas. Recomendamos usar poco peso y hacer muchas repeticiones para hacer trabajar bien el cuerpo.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Otra variante parecida son las Sentadilla con barra, que se hacen de la misma manera, pero en este caso situaremos una barra detrás del cuello, en la nuca. Podemos usar la barra sola para empezar, y poco a poco ir añadiendo peso, eso sí, no más del que seamos capaces de levantar.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -406,7 +406,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Una vez aprendas Cómo hacer sentadillas querrás hacer todas sus variantes e incluso adaptarlas a tus necesidades y gustos. La verdad es que son ejercicios muy versátiles.</p>
                     <p class="mb-3 ls text-medium">Por ejemplo, las sentadillas con rebote, se hacen como las sentadillas básicas pero separaremos un poco más las piernas y cuando estemos abajo bajaremos un par de veces más, sin llegar a subir hasta arriba, simulando un rebote. También existen los squats con abductor, con las cuales tras realizar este ejercicio haremos una patada lateral, de esta manera lograremos hacer un trabajo doble.</p>
                     <p class="mb-3 ls text-medium">Recordad hacer estiramientos de cuádriceps al final de los ejercicios para ayudar a los músculos a que se recuperen.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -423,7 +423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Ahora que ya habéis aprendido a hacer una sentadilla la buena noticia es que podéis hacerla cuando queráis. Descargando la app de ictiva, que es gratuita, en Apple Store si tenéis un móvil con iOS o en Google Play si tenéis Android. Al descargarla podréis ver más de 50 vídeos gratis tantas veces como queráis, a parte de las <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8" class="text-primary" target="_blank">sentadillas en casa</a> hay más de 21 disciplinas diferentes.</p>
                     <p class="mb-3 ls text-medium">Si os abonáis podréis ver más de 800 videosesiones diferentes, además tendréis acceso a un seguimiento de vuestro entrenamiento, con información sobre vuestro IMC, vuestro peso, los vídeos completos que habéis hecho, etc. Para que sepáis en qué fase estáis.</p>
                     <p class="mb-3 ls text-medium">De esta forma no tendréis excusa para no hacer un <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" class="text-primary" target="_blank">entrenamiento diario</a> y os podréis poner en forma en cualquier lado, en casa, en un descanso en la oficina, de paseo, en un parque… ¡Dónde queráis!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -440,7 +440,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para que puedas seguir una dieta adecuada hemos creado el apartado dietas en nuestra web dónde podrás hacer platos sanos y sabrosos rápidamente en casa. Si uno de ellos no te gusta podrás sustituirlo por otro que te proponemos.</p>
                     <p class="mb-3 ls text-medium">También verás la información nutricional que te aporta el plato junto con la receta. Nuestras dietas están formadas de 5 platos diarios completos porque al hacer régimen tiene que comer bien, no dejar de comer.</p>
                     <p class="mb-3 ls text-medium">Esta es la clave para que tus squats sean mucho más efectivos, si los combinas con una dieta, en cuestión de semanas verás cómo cambia tu cuerpo, será más estilizado y estará más musculado.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -457,7 +457,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Por ejemplo, en Facebook hemos creado grupos específicos en función de los objetivos que tengan los integrantes, para que se apoyen y se animen unos a otros y para que puedan resolver sus dudas, como por ejemplo los que hacen sentadillas en casa.</p>
                     <p class="mb-3 ls text-medium">En el blog encontraréis las últimas noticias sobre bienestar deporte y salud, además de consejos para mejorar la técnica de los squats.</p>
                     <p class="mb-3 ls text-medium">No lo dudéis más y uniros hoy mismo a la comunidad que es apoyará a lo largo de vuestro recorrido para lograr vuestros objetivos.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
