--- a/salud.html.twig
+++ b/salud.html.twig
@@ -240,7 +240,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>TARIFAS</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>40% DTO</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-6 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="btn text-dark text-uppercase" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>TARIFAS</strong></a>
+                        <a class="btn text-dark text-uppercase" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>40% DTO</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
