--- a/entrenador.html.twig
+++ b/entrenador.html.twig
@@ -129,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>TARIFAS</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>40% DTO</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -138,7 +138,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=entrenador"><strong>TARIFAS</strong></a>
+                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=entrenador"><strong>40% DTO</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=entrenador">INICIA TU ENTRENAMIENTO</a>
